Changed to incorporate computer player difficulty